# breathcoach

./: .gitignore  README.md  pyproject.toml  run_demo.py
models/: README.md
notebooks/: README.md
runs/v4-aug-2026-05-18/: best.pth
runs/v8-bce-2026-05-19/: best.pth
scripts/: README.md  generate_pseudo_labels.py  smoke_test_pipeline.py
src/nanobreath/: __init__.py  calibrate.py  config.py  eval.py  eval_checkpoint.py  plot_calibration.py  train.py  visualize_predictions.py
src/nanobreath/baseline/: ruinskiy_lavner.py
src/nanobreath/data/: dataset.py  download_vocalset.py  generate_pseudo_labels.py  label_format.md  make_fake_labels.py  svl_to_breath_json.py
src/nanobreath/deployment/: export_breath_head.py  precompute_predictions.py  serve.py
src/nanobreath/deployment/wasm/: README.md  breath_head.c  breath_head.h  export_test_fixture.py  test_breath_head.c
src/nanobreath/deployment/web/: README.md  index.html  sample_predictions.json
src/nanobreath/deployment/web/clips/: f1_dona_vibrato.json  f5_caro_straight.json  f8_caro_vibrato.json  m3_caro_vibrato.json  m9_caro_vibrato.json  manifest.json
src/nanobreath/feature/: phrase_tracker.py
src/nanobreath/model/: breath_head.py  joint.py
tests/: test_smoke.py
