[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanobreath"
version = "0.1.0"
description = "Real-time joint VAD + breath-event detection for English singing voice, deployable in the browser."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Festus Kahunla", email = "fkahunla@gmail.com" },
]
keywords = ["singing", "breath-detection", "voice", "real-time", "wasm", "music-information-retrieval"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",  # spectrogram PNG rendering + training-curve plots
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
]
notebooks = [
    "jupyter",
]

[project.scripts]
nanobreath-download = "nanobreath.data.download_vocalset:main"
nanobreath-baseline = "nanobreath.baseline.ruinskiy_lavner:main"
nanobreath-train    = "nanobreath.train:main"
nanobreath-eval     = "nanobreath.eval:main"
nanobreath-serve    = "nanobreath.deployment.serve:main"
nanobreath-precompute = "nanobreath.deployment.precompute_predictions:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"nanobreath.data" = ["*.md"]

[tool.ruff]
line-length = 100
target-version = "py310"
